@@ -3,19 +3,10 @@
   (:require [clojure.java.io :as io]))
 
 
-;; Testing options
-(def test-opts {:properties {:clj-config.env "dev"
-			     :java.library.path "/some/dir"}
-		:jvm-opts ["-server" 
-			    "-Xms1G"
-			    "-Xmx2G"
-			    "-XX:MaxPermSize=128M"]})
-
-
 (defn format-properties [opts]
   (if (nil? (:properties opts))
     ""
-    (apply str (interpose " " (map #(name "\"-D" % "=" 
+    (apply str (interpose " " (map #(str "-D" (name %) "=\"" 
 					  (% (:properties opts)) "\"")
 				   (keys (:properties opts)))))))
 
@@ -96,7 +87,7 @@
 	name (:name opts)
 	version (:version opts)
 	artifact-dir (:artifact-dir opts)
-	source-uberjar-path (str root "/" name "-" version "-standalone.jar")
+	source-uberjar-path (str root "/target/" name "-" version "-standalone.jar")
 	artifact-uberjar-path (str artifact-dir "/" name "-" version "-standalone.jar")
 	artifact-init-script-path (str artifact-dir "/" name "d")
 	install-script-path (str artifact-dir "/" "install-" name)
